--- a/animate-gif.html
+++ b/animate-gif.html
@@ -6,12 +6,13 @@
             delay: { value: 500 },
             dimensionX: { value: 100 },
             dimensionY: { value: 100 },
+            mimeType: { value: "image/gif" },
             quality: { value: 100 },
             repeat: { value: true }
         },
         inputs:1,
         outputs:1,
-        icon: "image.png",
+        icon: "file-image-o.png",
         label: function() {
             return this.name || "animate-gif";
         }
@@ -40,6 +41,16 @@
     </div>
 
     <div class="form-row">
+        <label for="node-input-mimeType">MIME Type</label>
+        <select id="node-input-mimeType">
+            <option value="image/bmp">image/bmp</option>
+            <option value="image/gif">image/gif</option>
+            <option value="image/jpeg">image/jpeg</option>
+            <option value="image/png">image/png</option>
+        </select>
+    </div>
+
+    <div class="form-row">
         <label for="node-input-quality">Quality</label>
         <input type="text" id="node-input-quality" placeholder="100">
     </div>
@@ -63,6 +74,9 @@
 
         <dt class="optional">dimensionY <span class="property-type">int</span></dt>
         <dd> size of image Y dimension.</dd>
+
+        <dt class="optional">mimeType <span class="property-type">string</span></dt>
+        <dd> MIME type of the incoming image buffers.</dd>
 
         <dt class="optional">quality <span class="property-type">int</span></dt>
         <dd> image quality from 0 to 100.</dd>
